k8s/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: micro
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /admin/?(.*)
        pathType: Prefix
        backend:
          service:
            name: angular-service
            port:
              number: 80
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: react-service
            port:
              number: 80
